[package]
name = "external-delegate-token-master"
version = "0.1.0"
edition = "2021"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
]

[lib]
crate-type = ["cdylib"]

[features]
alloc = []
client = []
debug = []

[dependencies]
quasar-lang = { git = "https://github.com/blueshift-gg/quasar", branch = "master" }
solana-instruction = { version = "3.2.0" }
solana-nostd-secp256k1-recover = "0.1.2"
solana-keccak-hasher = { version = "3.1.0", default-features = false }

[dev-dependencies]
quasar-svm = { version = "0.1" }
solana-account = { version = "3.4.0" }
solana-address = { version = "2.2.0", features = ["decode"] }
solana-instruction = { version = "3.2.0", features = ["bincode"] }
solana-pubkey = { version = "4.1.0" }
k256 = { version = "0.13", features = ["ecdsa"] }
sha3 = "0.11"
alloy-primitives = { version = "1", features = ["k256"] }
